@@ -21,6 +21,9 @@
    - jakob@cvs.openbsd.org 2001/12/18 10:04:21
      [auth.h hostfile.c hostfile.h]
      remove auth_rsa_read_key, make hostfile_ready_key non static; ok markus@
+   - jakob@cvs.openbsd.org 2001/12/18 10:05:15
+     [auth2.c]
+     log fingerprint on successful public key authentication; ok markus@
 
 20011219
  - (stevesk) OpenBSD CVS sync X11 localhost display
@@ -7049,4 +7052,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1698 2001/12/21 01:47:09 djm Exp $
+$Id: ChangeLog,v 1.1699 2001/12/21 01:48:54 djm Exp $
